@@ -54,6 +54,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
+
 0.001002 2014-10-17T08:34:14Z
  [Added / develop requires]
  - Dist::Zilla 5
